# polyhedra-correction-library

./: .clang-format  .cproject  .directory  .gitignore  .project  CMakeLists.txt  EdgeList.cpp  EdgeList_intersection.cpp  EdgeList_io.cpp  EdgeSet.cpp  EdgeSet.h  EdgeSet_intersection.cpp  Edge_io.cpp  Facet.cpp  Facet.h  Facet_intersection.cpp  Facet_io.cpp  Facet_join_facets.cpp  Facet_preprocess.cpp  FutureFacet.cpp  FutureFacet_intersection.cpp  Gauss_string.cpp  Gauss_test.cpp  Polyhedron-class.h  Polyhedron.cpp  Polyhedron.h  Polyhedron_correction.cpp  Polyhedron_correction_preprocess.cpp  Polyhedron_correction_test.cpp  Polyhedron_deform.cpp  Polyhedron_deform_linear.cpp  Polyhedron_deform_linear_control.cpp  Polyhedron_deform_linear_vertmin.cpp  Polyhedron_figures.cpp  Polyhedron_intersection.cpp  Polyhedron_intersection_j.cpp  Polyhedron_io.cpp  Polyhedron_join_facets.cpp  Polyhedron_join_points.cpp  Polyhedron_preprocess.cpp  (+17 more)
.externalToolBuilders/: cmake_builder.launch
Debug/: makefile  objects.mk  sources.mk
Documentation/: CMakeLists.txt
Include/: ClusterNorm.h  DebugAssert.h  DebugPrint.h  Edge.h  EdgeContourAssociation.h  EdgeContourAssociationList.h  EdgeList.h  EdgeSet.h  Facet.h  FutureFacet.h  MatrixDistNorm.h  PolyhedraCorrectionLibrary.h  Polyhedron-class.h  Polyhedron.h  SContour.h  SideOfContour.h  SpherePoint.h  TreeClusterNorm.h  TreeClusterNormNode.h  VertexInfo.h  matrix_invert.h
Polyhedron_join_facets_2/: .directory  EdgeList_intersection.cpp  EdgeSet.cpp  Facet.cpp  Facet_deform_linear_vertmin.cpp  Facet_join_facets.cpp  Facet_preprocess.cpp  FutureFacet_intersection.cpp  Gauss_string.h  Polyhedron_figures.cpp  Polyhedron_intersection_j.cpp  Polyhedron_join_facets.cpp  Polyhedron_join_points.cpp  Polyhedron_test_consections.cpp  list_squares_method.h  main.cpp
Scripts/: astyle.sh  build_all.sh  calculate_slocs.sh  cat_config.sh  collect_statistics.sh  corner-detection-good.sh  corner-detection-symm-lens-good.sh  example-edges.sh  format.sh  g++-wrapper.sh  gcc-wrapper.sh  global_correction_typical.sh  make-home-asan.sh  make-home-debug.sh  make-home-windows.sh  make-home.sh  make-note.sh  make-work-asan.sh  make-work-debug.sh  make-work-ubsan.sh  make-work.sh  nq-estimator-home.sh  paraview_series_show.py  performance_test.py  remove_trailing_spaces.sh  replace_string_in_files.pl  replace_string_in_files.sh  run-correction-home.sh  run-correction.sh  run-edge-correction-home.sh  run-edge-correction.sh  run-fit-tractable-cube-gauge.sh  run-ipopt-work.sh  run_clp_solver.sh  run_cplex_solver.sh  successfull_global_correction.sh  timer  valgrind_cmd.sh
Source/: .directory  Common.cpp  Common.h  Constants.h  DebugAssert.h  DebugPrint.h  DefaultScaner.h  EdgeContourAssociation_test.cpp  KernelCGAL.h  PCLDumper.cpp  PCLDumper.h  PolyhedraCorrectionLibrary.h  PolyhedronCGAL.cpp  PolyhedronCGAL.h  SharedFromThis.h  SparseMatrixEigen.cpp  SparseMatrixEigen.h  SupportFunction.h  matrix_invert.h
SourceMatlab/: pdcoLSdual.m  pdcoLSprimal.m
Tests/: CMakeLists.txt  GlobalCorrectionReal.cpp  HallTurlachDetector.cpp  Recoverer_test.cpp  ShadowContourCluterizer_test.cpp  buildCluster.cpp  calculateHorizontalSection.cpp  correct.cpp  dat2ply.cpp  detectSectionCorners.cpp  detectSymmetricLensCorners.cpp  dualTransform.cpp  experimentCGAL_convexHull.cpp  experimentCGAL_convexHullDynamic.cpp  experimentCGAL_convexHullStatic.cpp  facetCorrectorPrototype.cpp  fitTractableSet.cpp  gaussStringTest.cpp  globalCorrection.cpp  globalCorrectionCube.cpp  intersectCubeCutted.cpp  intersectPolyhedron.cpp  join2DFacets.cpp  joinFacets.cpp  joinFacetsMultiple.cpp  moveVertexGetStatistics.cpp  moveVertexLinear2.cpp  moveVertexW.cpp  polyhedron_prog_incr_builder.cpp  printTemplatePolyhedrons.cpp  probeBody.cpp  shadowContoursConstruction.cpp  supportPlanes2DJoiner.cpp
UnitTests/: AllGtestsDriver.cpp
config/: .gitignore  debug_exceptions.conf  debug_exceptions.conf.ini
include/: DebugPrint.h  Edge.h  Facet.h  Polyhedron-class.h  SideOfContour.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
octave-3.6.1/: .directory  AUTHORS  BUGS  ChangeLog  INSTALL.OCTAVE  Makefile.in  aclocal.m4  config.h.in  configure
poly-data-in/: .directory  cube.ply  cube_cutted.dat~  cubecut.ply
poly-data-out/: .directory  Consections - 0.ply  Consections - 1.ply  Consections - 2.ply  Consections - 3.ply  Consections - 4.ply  Last.ply  README  cube_cutted.ply  cube_cutted.ply~  cube_cutted_0x0y1z_1.ply  cube_cutted_0x0y1z_2.ply  cube_cutted_0x0y1z_3.ply  cube_cutted_z3.ply  multijoin-facets-0.ply  multijoin-facets-1.ply  multijoin-facets-10.ply  multijoin-facets-11.ply  multijoin-facets-12.ply  multijoin-facets-13.ply  multijoin-facets-2.ply  multijoin-facets-3.ply  multijoin-facets-4.ply  multijoin-facets-5.ply  multijoin-facets-6.ply  multijoin-facets-7.ply  multijoin-facets-8.ply  multijoin-facets-9.ply  poly-big - 2011-4-16 9_31_45.ply  poly-big - 2011-4-16 9_9_21.ply  poly-big - 2011-4-16 9_9_31.ply  poly-big - 2011-4-16 9_9_41.ply  poly-big - 2011-4-4 10_51_19.ply  poly-big - 2011-4-4 10_52_12.ply  poly-big - 2011-4-4 10_53_12.ply  poly-big - 2011-4-4 10_58_8.ply  poly-big - 2011-4-4 10_59_23.ply  poly-big - 2011-4-4 12_34_17.ply  poly-big - 2011-4-4 12_40_45.ply  poly-big - 2011-4-4 12_40_59.ply  (+283 more)
scripts/: commit_to_obs.sh
src/: DebugPrint.h  Edge.cpp  EdgeList.cpp  EdgeList_intersection.cpp  EdgeSet_intersection.cpp  Edge_io.cpp  Facet.cpp  Facet_intersection.cpp  Facet_io.cpp  Facet_join_facets.cpp  Facet_test.cpp  FutureFacet.h  Gauss_string.cpp  Gauss_test.cpp  Polyhedron-class.h  Polyhedron.cpp  Polyhedron.h  Polyhedron_correction.cpp  Polyhedron_correction_preprocess.cpp  Polyhedron_correction_test.cpp  Polyhedron_correction_test.cpp.new  Polyhedron_deform.cpp  Polyhedron_deform_linear.cpp  Polyhedron_intersection.cpp  main.cpp  (+9 more)
tests/: CMakeLists.txt  globalCorrectionCube.cpp  intersectCubeCutted.cpp  intersectPolyhedron.cpp  moveVertexGetStatistics.cpp
(+939 files in other folders)
